# shava

./: .ROADMAP.md.swp  .env.dev.example  .env.example  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  env_example.env  nginx.conf  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  .flake8  Dockerfile  Dockerfile.prod  entrypoint.sh  gunicorn.conf.py  openapi-schema.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_logging.py  wait_for_db.py
backend/articles/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: __init__.py  celery.py  middleware.py  sentry.py  settings.py  spectacular_hooks.py  test_secret_key.py  test_sentry.py  test_thumbnails.py  test_versioning.py  tests.py  thumbnails.py  urls.py
backend/gamification/: admin.py  apps.py  badges.py  levels.py  models.py  rules.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
backend/ingredients/: models.py
backend/news/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notifications/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/places/: admin.py  choices.py  models.py  permissions.py  serializers.py  test_cities.py  test_engagement.py  test_features.py  test_query_counts.py  test_views.py  tests.py  urls.py  views.py
backend/places_menu/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/rating/: admin.py  (+7 more)
(+244 files in other folders)
