[tool.poetry]
name = "top-shava"
version = "0.1.0"
description = "Shawarma rating app backend"
authors = ["Saberan <v.kotelnikovdidi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=5.2.4,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.5.0"}
Pillow = ">=10.0.0,<11.0.0"
python-json-logger = ">=2.0.7,<3.0.0"
django-filter = "^25.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-django = "^1.4"
flake8-bugbear = "^24.2.6"
flake8-builtins = "^2.4.0"
flake8-comprehensions = "^3.14.0"
pep8-naming = "^0.13.3"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
